using UnityEngine;

public class FastEnemy : BaseEnemy
{
    private void Awake()
    {
        gravityScale = 2f;
    }
}
