using TMPro;
using UnityEngine;
using UnityEngine.SceneManagement;

public class SceneLoader : MonoBehaviour
{

    public void LoadScene(string GameOver)
    {
        SceneManager.LoadScene(0);
    }

}